--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     "id": "vehicleInspectionAddin",
     "url": "https://geeganchee.github.io/UCCL/",
     "label": "Pre-Start Inspection",
-    "icon": ""
+    "icon": "icon.svg"
   }'>
   <title>Vehicle Inspection Add-In</title>
   <style>
@@ -61,10 +61,14 @@
     window.geotab.addin.vehicleInspectionAddin = function(api, state) {
       return {
         initialize: function(api, state, callback) {
-          // Get current user and set as driver
-          state.getSession(function(session) {
-            document.getElementById('driver').value = session.userName || '';
-          });
+          // Use modern session getter
+          if (api.getSession) {
+            api.getSession(function(session) {
+              document.getElementById('driver').value = session.userName || '';
+            });
+          } else {
+            document.getElementById('driver').value = '';
+          }
 
           // Show loading spinner for vehicles
           document.getElementById('vehicleLoading').style.display = 'inline';
