--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     window.geotab.addin.vehicleInspectionAddin = function(api, state) {
       return {
         initialize: function(api, state, callback) {
-          // Use modern session getter
+          // Use only api.getSession (never state.getSession)
           if (api.getSession) {
             api.getSession(function(session) {
               document.getElementById('driver').value = session.userName || '';
@@ -142,11 +142,4 @@
           });
         } else {
           document.getElementById('successMessage').style.display = 'none';
-          document.getElementById('errorMessage').textContent = 'Geotab API not available.';
-          document.getElementById('errorMessage').style.display = 'block';
-        }
-      });
-    });
-  </script>
-</body>
-</html>
+          document.getElementById('errorMessage').textContent = 'Geotab API not available
